--- a/LtcProviderData/LtcProviderData/LtcProviderData.csproj
+++ b/LtcProviderData/LtcProviderData/LtcProviderData.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ProviderDetailViewModel.cs" />
+    <Compile Include="Models\ProviderEditViewModel.cs" />
     <Compile Include="Models\ProviderIndexViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -244,6 +245,7 @@
     <Content Include="Views\Provider\Create.cshtml" />
     <Content Include="Views\Provider\Detail.cshtml" />
     <Content Include="Views\Provider\Index.cshtml" />
+    <Content Include="Views\Provider\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
